バリデーションエラーが効かない

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="ja" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
-<head th:replace="_header :: header(~{::title})">
+<html  xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+th:replace="~{fragments/layout :: layout(~{::title},~{::body})}">
+<head>
   <title>トップページ｜課題管理アプリケーション</title>
 </head>
 <body>
-<h3>課題管理アプリケーション</h3>
+<h1 class="mt-5">課題管理アプリケーション</h1>
 <div>
     <a href="./issues/list.html" th:href="@{/issuesTop}">課題一覧</a>
 </div>
