--- a/src/main/resources/templates/issues/deleteForm.html
+++ b/src/main/resources/templates/issues/deleteForm.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="ja" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html  xmlns="http://www.w3.org/1999/xhtml"
+       xmlns:th="http://www.thymeleaf.org"
+       th:replace="~{fragments/layout :: layout(~{::title},~{::body})}">
 <head>
-    <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
     <link th:href="@{/css/index.css}" rel="stylesheet" type="text/css">
     <title>課題削除 | 課題管理アプリケーション</title>
