--- a/src/main/resources/templates/issues/creationForm.html
+++ b/src/main/resources/templates/issues/creationForm.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="ja" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html  xmlns="http://www.w3.org/1999/xhtml"
+       xmlns:th="http://www.thymeleaf.org"
+       th:replace="~{fragments/layout :: layout(~{::title},~{::body})}">
 <head>
-    <meta charset="UTF-8">
     <title>課題作成 | 課題管理アプリケーション</title>
 </head>
 <body>
@@ -11,20 +11,23 @@
 <a href="./deleteForm.html" th:href="@{/issuesDelete/deleteForm}">削除</a>
 <h1>課題作成</h1>
 <form action="#" th:action="@{/issuesCreate/create_method}" th:method="post" th:object="${issueForm}">
-    <div>
+    <div class="mt-3">
         <label for="idInput">id</label>
         <input type="text" id="idInput" th:field="*{id}">
     </div>
-    <div>
-    <label for="summaryInput">概要</label>
-    <input type="text" id="summaryInput" th:field="*{summary}">
+    <div class="mt-3">
+        <label for="summaryInput" class="form-label">概要</label>
+        <input type="text" id="summaryInput" th:field="*{summary}" class="form-control" th:classappend="${#fields.hasErrors('summary')} ? is-invalid">
+        <p cljass="invalid-feedback" th:if="${#fields.hasErrors('summary')}" th:errors="*{summary}">(error)</p>
+
+        <label for="descriptionInput" class="form-label">説明</label>
+        <textarea id="descriptionInput" row="10" th:field="*{description}" class="form-control"
+                  th:classappend="${#fields.hasErrors('description')} ? is-invalid"></textarea>
+        <p cljass="invalid-feedback" th:if="${#fields.hasErrors('description')}" th:errors="*{description}">(error)</p>
     </div>
-    <div>
-        <label for="descriptionInput">説明</label>
-        <textarea id="descriptionInput" row="10" th:field="*{description}"></textarea>
-    </div>
-    <div>
-        <button type="submit">作成</button>
+    <div class="mt-3">
+        <button type="submit" class="btn-primary">作成</button>
+        <a href="./list.html" th:href="@{/issuesTop}" class="btn btn-secondary">キャンセル</a>
     </div>
 </form>
 </body>
