--- a/src/main/resources/templates/issues/detail.html
+++ b/src/main/resources/templates/issues/detail.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="ja" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
-<head th:replace="_header :: header(~{::title})">
+<html  xmlns="http://www.w3.org/1999/xhtml"
+       xmlns:th="http://www.thymeleaf.org"
+       th:replace="~{fragments/layout :: layout(~{::title},~{::body})}">
+<head>
     <title>課題詳細 | 課題管理アプリケーション</title>
 </head>
 <body>
