--- a/src/main/resources/templates/issues/list.html
+++ b/src/main/resources/templates/issues/list.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="ja" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
-<head th:replace="_header :: header(~{::title})">
+<html  xmlns="http://www.w3.org/1999/xhtml"
+       xmlns:th="http://www.thymeleaf.org"
+       th:replace="~{fragments/layout :: layout(~{::title},~{::body})}">
+<head>
     <title>課題一覧 | 課題管理アプリケーション</title>
 </head>
 <body>
 <a href="../index.html" th:href="@{/}">トップページ</a>
 <a href="./creationForm.html" th:href="@{/issuesCreate/creationForm}">作成</a>
 <a href="./deleteForm.html" th:href="@{/issuesDelete/deleteForm}">削除</a>
-<h1>課題一覧</h1>
+<h1 class="mt-5">課題一覧</h1>
 <br>
-<table>
+<table class="table">
     <thead>
     <tr>
         <th>#</th>
